--- a/part_5/syllabus.html
+++ b/part_5/syllabus.html
@@ -1,88 +1,103 @@
-<h1>KIEI925</h1>
-<p>Startup Programming & Management</p>
+<h1>KIEI 925</h1>
+<p><i>Startup Programming & Management</i></p>
 
-Knowing how to hack also means that when you have ideas, you’ll be able to implement them… It’s a big advantage, when you’re considering an idea like putting a college facebook online, if instead of merely thinking “That’s an interesting idea,” you can think instead “That’s an interesting idea. I’ll try building an initial version tonight.”
+<p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
 
-— Paul Graham
+<p>&ndash; <style="color:blue">PAUL GRAHAM</style></p>
 
-Why
+<h2>WHY</h2>
 
-The new reality is that every company is a software company. Even in traditionally brick-and-mortar industries, software is performing more and more of the work. And, of course, many companies (especially “lean startups”) are purely software-based.
+<p>The new reality is that every company is a software company. Even in traditionally brick-and-mortar industries, software is performing more and more of the work. And, of course, many companies (especially &ldquo;lean startups&rdquo;) are purely software-based.</p>
 
-Lacking an understanding of how software works while working in a software world puts you at a disadvantage. In this course, we will build a functional prototype of an idea. To do this, we will learn the Ruby on Rails web application framework, but our higher-level goals are to:
+<p>Lacking an understanding of how software works while working in a software world puts you at a disadvantage. In this course, we will build a functional prototype of an idea. To do this, we will learn the Ruby on Rails web application framework, but our higher-level goals are to:</p>
 
-Understand the general, platform-independent patterns of how applications work
-Communicate more effectively and credibly with developers on our teams
-Develop a builder’s eye for problems that can be solved with technology
-Prioritize features more intelligently by developing a better feel for their costs
-Be able to make and test small changes to an application yourself, improving team efficiency
-Learn the agile development technique, and become familiar with the tools of the trade
-Be empowered with a new, powerful, and just plain fun creative outlet
+<ol>
+	<li>Understand the general, platform-independent patterns of how applications work</li>
+	<li>Communicate more effectively and credibly with developers on our teams</li>
+	<li>Develop a builder&rsquo;s eye for problems that can be solved with technology</li>
+	<li>Prioritize features more intelligently by developing a better feel for their costs</li>
+	<li>Be able to make and test small changes to an application yourself, improving team efficiency</li>
+	<li>Learn the agile development technique, and become familiar with the tools of the trade</li>
+	<li>Be empowered with a new, powerful, and just plain fun creative outlet</li>
+</ol>
 
-Who, Where, & When
+<h2>Who, Where, & When</h2>
 
-Instructor:
-Raghu Betina (r-betina@kellogg.northwestern.edu)
-Lecture:
-Mondays 6:00-9:00pm, Wieboldt 203
+<table>
+	<tr>
+		<td>Instructor:</td>
+		<td>Raghu Betina (r-betina@kellogg.northwestern.edu)</td>
+	</tr>
+	<tr>
+		<td>Lecture:</td>
+		<td>Mondays 6:00-9:00pm, Wieboldt 203</td>
+	</tr>
+	<tr>
+		<td>Office Hours:</td>
+		<td>TBD, and by appointment</td>
+	</tr>
+</table>
 
-Office Hours:
-TBD, and by appointment
-Required Materials
+<h2>Required Materials</h2>
 
-Text:
-Chris Pine’s Learn to Program, Second Edition.
+<table>
+	<tr>
+		<td>Text:</td>
+		<td>Chris Pine&rsquo;s <i>Learn to Program, <u>Second Edition.</u></i></td>
+	</tr>
+	<tr>
+		<td>Software:</td>
+		<td>You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.</td>
+	</tr>
+</table>
 
-Software:
-You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.
+<h2>Course Format</h2>
 
-Course Format
+<p>This course is entirely project-driven. We will build a series of applications together in class. We will start with a simple idea and learn just what we need about various technologies (HTML, CSS, Ruby, Rails, JavaScript) to make that idea real.</p>
 
-This course is entirely project-driven. We will build a series of applications together in class. We will start with a simple idea and learn just what we need about various technologies (HTML, CSS, Ruby, Rails, JavaScript) to make that idea real.
+<p>We will then build a slightly more complicated idea, and deepen our knowledge of each topic. And then an even more complicated idea. In this way, we will spiral across topics picking up essential, applicable knowledge; what we&rsquo;re not going to do are deep theoretical dives into each topic, one after the other, without ever getting to build real stuff.</p>
 
-We will then build a slightly more complicated idea, and deepen our knowledge of each topic. And then an even more complicated idea. In this way, we will spiral across topics picking up essential, applicable knowledge; what we’re not going to do are deep theoretical dives into each topic, one after the other, without ever getting to build real stuff.
+<p>In addition, you will build your own app idea. During the first two weeks, you will meet with the instructor to discuss your ideas and select one that matches the scope of the course. Each week, part of your homework will be to plug the concepts you learned in class into your app. This app will be your final project and the subject of your final presentation.</p>
 
-In addition, you will build your own app idea. During the first two weeks, you will meet with the instructor to discuss your ideas and select one that matches the scope of the course. Each week, part of your homework will be to plug the concepts you learned in class into your app. This app will be your final project and the subject of your final presentation.
+<p>Lectures will generally consist of the instructor demonstrating a concept and then giving the class a challenge to practice it and think up questions. You are strongly encouraged to work in pairs during these challenges.</p>
 
-Lectures will generally consist of the instructor demonstrating a concept and then giving the class a challenge to practice it and think up questions. You are strongly encouraged to work in pairs during these challenges.
+<p>Office hours are primarily for Q&A, but can also be a mix of lecture review, homework solutions, additional practice, and a place to talk about topics that are out-of-scope of the main course.</p>
 
-Office hours are primarily for Q&A, but can also be a mix of lecture review, homework solutions, additional practice, and a place to talk about topics that are out-of-scope of the main course.
+<h2>Expectations & Time Commitment</h2>
 
-Expectations & Time Commitment
+<p>This course is designed for a beginner who has never programmed before. It is our goal to make programming accessible to as many people as possible, and dispel the mystique that surrounds it. It&rsquo;s really possible, with passion and persistence, for a beginner to become productive very quickly with today&rsquo;s tools.</p>
 
-This course is designed for a beginner who has never programmed before. It is our goal to make programming accessible to as many people as possible, and dispel the mystique that surrounds it. It’s really possible, with passion and persistence, for a beginner to become productive very quickly with today’s tools.
+<p>Note: it&rsquo;s possible, but not always easy. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.</p>
 
-Note: it’s possible, but not always easy. If you have never seen a line of code before, you are going to be learning a lot of new things all at once, and so should plan to spend a significant amount of time. If you already have some programming experience, you may have to spend less time initially while we learn basics; but once we get into Rails, it will likely be all new to you too.
+<p>In short, it is not recommended to take this course if you are a completely new to programming and you have a lot of other commitments this quarter.</p>
 
-In short, it is not recommended to take this course if you are a completely new to programming and you have a lot of other commitments this quarter.
+<p>What you can expect from us in return is a lot of support. The instructor will be holding lots of scheduled office hours and available by appointment. We all will help each other on the class discussion board. There is no such thing as a dumb question; we&rsquo;re all beginners here, learning together.</p>
 
-What you can expect from us in return is a lot of support. The instructor will be holding lots of scheduled office hours and available by appointment. We all will help each other on the class discussion board. There is no such thing as a dumb question; we’re all beginners here, learning together.
+<h2>Attendance <i>(10% of your grade)</i></h2>
 
-Attendance (10% of your grade)
+<p>Lecture attendance is mandatory, and you are expected to be on time. To account for the vagaries of life, you will be allowed to miss one class with no penalty. After that, 1% will be deducted from your final grade for each unexcused absence. In addition, if you miss more than three classes, you will not gain access to the lecture recording of any class you do not attend.</p>
 
-Lecture attendance is mandatory, and you are expected to be on time. To account for the vagaries of life, you will be allowed to miss one class with no penalty. After that, 1% will be deducted from your final grade for each unexcused absence. In addition, if you miss more than three classes, you will not gain access to the lecture recording of any class you do not attend.
+<p>An excused absence is a documented medical emergency, religious holiday, etc. Get in touch with the instructor immediately if you foresee any such absences.</p>
 
-An excused absence is a documented medical emergency, religious holiday, etc. Get in touch with the instructor immediately if you foresee any such absences.
+<p>Attendance of office hours will be noted and may make the instructor more sympathetic when it comes to borderline grades.</p>
 
-Attendance of office hours will be noted and may make the instructor more sympathetic when it comes to borderline grades.
+<h2>Homework <i>(40% of your grade, 5% each)</i></h2>
 
-Homework (40% of your grade, 5% each)
+<p>Homeworks will be posted each week by 3pm on Tuesday. Homeworks will generally consist of re-doing what we did together in lecture, applying that concept to a few other contexts, and then applying it to your own app idea.</p>
 
-Homeworks will be posted each week by 3pm on Tuesday. Homeworks will generally consist of re-doing what we did together in lecture, applying that concept to a few other contexts, and then applying it to your own app idea.
+<p>Homeworks will be due on Monday at 3pm; no exceptions, because we will often discuss homework solutions in class. To account for the vagaries of life, you can miss one homework submission without penalty.</p>
 
-Homeworks will be due on Monday at 3pm; no exceptions, because we will often discuss homework solutions in class. To account for the vagaries of life, you can miss one homework submission without penalty.
+<p>You are allowed and encouraged to work in study groups on the homeworks, but you must type up your final solutions yourself. In other words, no copy-pasting.</p>
 
-You are allowed and encouraged to work in study groups on the homeworks, but you must type up your final solutions yourself. In other words, no copy-pasting.
+<h2>Midterm <i>(20% of your grade)</i></h2>
 
-Midterm (20% of your grade)
+<p>The midterm exam will occupy one-half of Week 7 class. It will be a practical exam; you will download a broken application and fix it. It is strongly recommended that you attend the midterm exam review session the week prior.</p>
 
-The midterm exam will occupy one-half of Week 7 class. It will be a practical exam; you will download a broken application and fix it. It is strongly recommended that you attend the midterm exam review session the week prior.
+<h2>Final Project <i>(30% of your grade)</i></h2>
 
-Final Project (30% of your grade)
+<p>The final project will be to build one of your own ideas and to write a brief essay about your app and what you learned from the process of building it. Note that if you complete all your homeworks on time, your final project should be nearly complete by Week 9, and after that you just need to add polish.</p>
 
-The final project will be to build one of your own ideas and to write a brief essay about your app and what you learned from the process of building it. Note that if you complete all your homeworks on time, your final project should be nearly complete by Week 9, and after that you just need to add polish.
-
-Tentative Schedule (May change to accommodate guest presenters & student needs)
+<h2>Tentative Schedule <i>(May change to accommodate guest presenters & student needs)</i></h2>
 
 Week 1
 Getting Started
