--- a/part_5/syllabus.html
+++ b/part_5/syllabus.html
@@ -3,7 +3,7 @@
 
 <p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
 
-<p>&ndash; <style="color:blue">PAUL GRAHAM</style></p>
+<p>&ndash; <style="color:blue"><a href="http://paulgraham.com/startupideas.html" target="_blank">PAUL GRAHAM</style></a></p>
 
 <h2>WHY</h2>
 
@@ -99,82 +99,118 @@
 
 <h2>Tentative Schedule <i>(May change to accommodate guest presenters & student needs)</i></h2>
 
-Week 1
-Getting Started
-Course introduction
-Text editor basics & keyboard shortcuts
-GitHub basics
-HTML & CSS
-Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"
-Week 2
-Defining Your MVP
-Bootstrap & tools
-Low-fidelity sketches
-Extracting user stories
-Prioritizing and eliminating non-essentials
-Domain Modeling
-Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model
-Ruby Foundations
-Data types & instructions (begin reading Pine book)
-Week 3
-Managing lists of things
-Defining our own instructions
-APIs
-Goal/HW: Finish Pine book
-Week 4
-Ruby Objects
-Defining our own data types
-Creating individual instances of objects
-Adding attributes
-Class inheritance
-Goal/HW: Read data from an external service like Facebook
-Rails Fundamentals
-Setting up a web server
-Listening for requests
-Responding dynamically
-Goal/HW: Get a web server up and running, add your static HTML mockups
-Week 5
-Console CRUD
-Database fundamentals
-Creating, reading, updating, and deleting
-Receiving inputs from the user
-Goal/HW: Add one database table
-Associations
-One-to-many
-Goal/HW: Add more models and relate them to one another
-Week 6
-Domain Modeling
-Many-to-many
-Goal/HW: Translate user stories into queries
-Web CRUD
-Wiring up HTML forms
-The Golden Seven
-Goal/HW: Complete all database-backed web resources
-Week 7
-Interface
-MIDTERM
-Displaying associated objects
-Goal/HW: Satisfy user story interface requirements
-Week 8
-Authentication and Authorization
-Cookies
-Encryption
-Filters
-Goal/HW: Add sign-in/out and personalized pages
-Week 9
-Extra Credit
-Validations, scaffold roundup
-Gems, pagination
-Deployment
-Callbacks
-Goal/HW: Implement one of the above
-Week 10
-Fun Stuff
-Sending email and SMS, payments, JavaScript, file uploads, testing
-Resources for further learning
-No homework
-Week 11
-Submit Final Project
-Celebrate!
+<table>
+	<tr>
+
+	<tr><td rowspan="7">Week 1</td></tr>
+    <tr><td>Getting Started</td></tr>
+    <tr><td>Course introduction</td></tr>
+	<tr><td>Text editor basics & keyboard shortcuts</td></tr>
+	<tr><td>GitHub basics</td></tr>
+	<tr><td>HTML & CSS</td></tr>
+	<tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</td></tr>
+	</tr>
+	  
+	<tr>
+		<tr><td rowspan="10">Week 2</td></tr>
+		<tr><td>Defining Your MVP</td></tr>
+		<tr><td>Bootstrap & tools</td></tr>
+		<tr><td>Low-fidelity sketches</td></tr>
+		<tr><td>Extracting user stories</td></tr>
+		<tr><td>Prioritizing and eliminating non-essentials</td></tr>
+		<tr><td>Domain Modeling</td></tr>
+		<tr><td>Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model</td></tr>
+		<tr><td>Ruby Foundations</td></tr>
+		<tr><td>Data types & instructions (begin reading Pine book)</td></tr>
+	</tr>
+	
+	<tr>
+		<tr><td rowspan="5">Week 3</td></tr>
+		<tr><td>Managing lists of things</td></tr>
+		<tr><td>Defining our own instructions</td></tr>
+		<tr><td>APIs</td></tr>
+		<tr><td>Goal/HW: Finish Pine book</td></tr>
+	</tr>
+
+	
+	<tr>
+		<tr><td rowspan="12">Week 4</td></tr>
+		<tr><td>Ruby Objects</td></tr>
+		<tr><td>Defining our own data types</td></tr>
+		<tr><td>Creating individual instances of objects</td></tr>
+		<tr><td>Adding attributes</td></tr>
+		<tr><td>Class inheritance</td></tr>
+		<tr><td>Goal/HW: Read data from an external service like Facebook</td></tr>
+		<tr><td>Rails Fundamentals</td></tr>
+		<tr><td>Setting up a web server</td></tr>
+		<tr><td>Listening for requests</td></tr>
+		<tr><td>Responding dynamically</td></tr>
+		<tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups<</tr><tr>/td></tr>
+	</tr>
+	
+	<tr>
+		<tr><td rowspan="9">Week 5</td></tr>
+		<tr><td>Console CRUD</td></tr>
+		<tr><td>Database fundamentals</td></tr>
+		<tr><td>Creating, reading, updating, and deleting</td></tr>
+		<tr><td>Receiving inputs from the user</td></tr>
+		<tr><td>Goal/HW: Add one database table</td></tr>
+		<tr><td>Associations</td></tr>
+		<tr><td>One-to-many</td></tr>
+		<tr><td>Goal/HW: Add more models and relate them to one another</td></tr>
+	</tr>
+	
+	<tr>
+		<tr><td rowspan="8">Week 6</td></tr>
+		<tr><td>Domain Modeling</td></tr>
+		<tr><td>Many-to-many</td></tr>
+		<tr><td>Goal/HW: Translate user stories into queries</td></tr>
+		<tr><td>Web CRUD</td></tr>
+		<tr><td>Wiring up HTML forms</td></tr>
+		<tr><td>The Golden Seven</td></tr>
+		<tr><td>Goal/HW: Complete all database-backed web resources</td></tr>
+	</tr>
+	
+	<tr>
+		<tr><td rowspan="5">Week 7</td></tr>
+		<tr><td>Interface</td></tr>
+		<tr><td>MIDTERM</td></tr>
+		<tr><td>Displaying associated objects</td></tr>
+		<tr><td>Goal/HW: Satisfy user story interface requirements</td></tr>
+	</tr>
+
+	<tr>
+		<tr><td rowspan="6">Week 8</td></tr>
+		<tr><td>Authentication and Authorization</td></tr>
+		<tr><td>Cookies</td></tr>
+		<tr><td>Encryption</td></tr>
+		<tr><td>Filters</td></tr>
+		<tr><td>Goal/HW: Add sign-in/out and personalized pages</td></tr>
+	</tr>
+
+	<tr>
+		<tr><td rowspan="7">Week 9</td></tr>
+		<tr><td>Extra Credit</td></tr>
+		<tr><td>Validations, scaffold roundup</td></tr>
+		<tr><td>Gems, pagination</td></tr>
+		<tr><td>Deployment</td></tr>
+		<tr><td>Callbacks</td></tr>
+		<tr><td>Goal/HW: Implement one of the above</td></tr>
+	</tr>
+
+	<tr>
+		<tr><td rowspan="5">Week 10</td></tr>
+		<tr><td>Fun Stuff</td></tr>
+		<tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</td></tr		>
+		<tr><td>Resources for further learning</td></tr>
+		<tr><td>No homework</td></tr>
+	</tr>
+	
+	<tr>
+		<tr><td rowspan="3">Week 11</td></tr>
+		<tr><td>Submit Final Project</td></tr>
+		<tr><td>Celebrate!</td></tr>
+	</tr>
+</table>
  
  
