--- a/part_5/syllabus.html
+++ b/part_5/syllabus.html
@@ -3,7 +3,7 @@
 
 <p>Knowing how to hack also means that when you have ideas, you&rsquo;ll be able to implement them&hellip; It&rsquo;s a big advantage, when you&rsquo;re considering an idea like putting a college facebook online, if instead of merely thinking &ldquo;That&rsquo;s an interesting idea,&rdquo; you can think instead &ldquo;That&rsquo;s an interesting idea. I&rsquo;ll try building an initial version tonight.&rdquo;</p>
 
-<p>&ndash; <style="color:blue"><a href="http://paulgraham.com/startupideas.html" target="_blank">PAUL GRAHAM</style></a></p>
+<p>&ndash; <style="color:blue"><a href="http://paulgraham.com/startupideas.html" target="_blank">Paul Graham</style></a></p>
 
 <h2>WHY</h2>
 
@@ -103,24 +103,24 @@
 	<tr>
 
 	<tr><td rowspan="7">Week 1</td></tr>
-    <tr><td>Getting Started</td></tr>
+    <tr><td><th>Getting Started</th></td></tr>
     <tr><td>Course introduction</td></tr>
 	<tr><td>Text editor basics & keyboard shortcuts</td></tr>
 	<tr><td>GitHub basics</td></tr>
 	<tr><td>HTML & CSS</td></tr>
 	<tr><td>Goal/HW: Push a webpage to GitHub, read "How to Get Startup Ideas"</td></tr>
 	</tr>
-	  
+
 	<tr>
 		<tr><td rowspan="10">Week 2</td></tr>
-		<tr><td>Defining Your MVP</td></tr>
+		<tr><td><th>Defining Your MVP</th></td></tr>
 		<tr><td>Bootstrap & tools</td></tr>
 		<tr><td>Low-fidelity sketches</td></tr>
 		<tr><td>Extracting user stories</td></tr>
 		<tr><td>Prioritizing and eliminating non-essentials</td></tr>
 		<tr><td>Domain Modeling</td></tr>
 		<tr><td>Goal/HW: Settle on an MVP, mock up idea in HTML, diagram domain model</td></tr>
-		<tr><td>Ruby Foundations</td></tr>
+		<tr><td><th>Ruby Foundations</th></td></tr>
 		<tr><td>Data types & instructions (begin reading Pine book)</td></tr>
 	</tr>
 	
@@ -135,37 +135,37 @@
 	
 	<tr>
 		<tr><td rowspan="12">Week 4</td></tr>
-		<tr><td>Ruby Objects</td></tr>
+		<tr><td><th>Ruby Objects</th></td></tr>
 		<tr><td>Defining our own data types</td></tr>
 		<tr><td>Creating individual instances of objects</td></tr>
 		<tr><td>Adding attributes</td></tr>
 		<tr><td>Class inheritance</td></tr>
 		<tr><td>Goal/HW: Read data from an external service like Facebook</td></tr>
-		<tr><td>Rails Fundamentals</td></tr>
+		<tr><td><th>Rails Fundamentals</th></td></tr>
 		<tr><td>Setting up a web server</td></tr>
 		<tr><td>Listening for requests</td></tr>
 		<tr><td>Responding dynamically</td></tr>
-		<tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups<</tr><tr>/td></tr>
+		<tr><td>Goal/HW: Get a web server up and running, add your static HTML mockups</td></tr>
 	</tr>
 	
 	<tr>
 		<tr><td rowspan="9">Week 5</td></tr>
-		<tr><td>Console CRUD</td></tr>
+		<tr><td><th>Console CRUD</th></td></tr>
 		<tr><td>Database fundamentals</td></tr>
 		<tr><td>Creating, reading, updating, and deleting</td></tr>
 		<tr><td>Receiving inputs from the user</td></tr>
 		<tr><td>Goal/HW: Add one database table</td></tr>
-		<tr><td>Associations</td></tr>
+		<tr><td><th>Associations</th></td></tr>
 		<tr><td>One-to-many</td></tr>
 		<tr><td>Goal/HW: Add more models and relate them to one another</td></tr>
 	</tr>
 	
 	<tr>
 		<tr><td rowspan="8">Week 6</td></tr>
-		<tr><td>Domain Modeling</td></tr>
+		<tr><td><th>Domain Modeling</th></td></tr>
 		<tr><td>Many-to-many</td></tr>
 		<tr><td>Goal/HW: Translate user stories into queries</td></tr>
-		<tr><td>Web CRUD</td></tr>
+		<tr><td><th>Web CRUD</th></td></tr>
 		<tr><td>Wiring up HTML forms</td></tr>
 		<tr><td>The Golden Seven</td></tr>
 		<tr><td>Goal/HW: Complete all database-backed web resources</td></tr>
@@ -173,7 +173,7 @@
 	
 	<tr>
 		<tr><td rowspan="5">Week 7</td></tr>
-		<tr><td>Interface</td></tr>
+		<tr><td><th>Interface</th></td></tr>
 		<tr><td>MIDTERM</td></tr>
 		<tr><td>Displaying associated objects</td></tr>
 		<tr><td>Goal/HW: Satisfy user story interface requirements</td></tr>
@@ -181,7 +181,7 @@
 
 	<tr>
 		<tr><td rowspan="6">Week 8</td></tr>
-		<tr><td>Authentication and Authorization</td></tr>
+		<tr><td><th>Authentication and Authorization</th></td></tr>
 		<tr><td>Cookies</td></tr>
 		<tr><td>Encryption</td></tr>
 		<tr><td>Filters</td></tr>
@@ -190,7 +190,7 @@
 
 	<tr>
 		<tr><td rowspan="7">Week 9</td></tr>
-		<tr><td>Extra Credit</td></tr>
+		<tr><td><th>Extra Credit</th></td></tr>
 		<tr><td>Validations, scaffold roundup</td></tr>
 		<tr><td>Gems, pagination</td></tr>
 		<tr><td>Deployment</td></tr>
@@ -200,7 +200,7 @@
 
 	<tr>
 		<tr><td rowspan="5">Week 10</td></tr>
-		<tr><td>Fun Stuff</td></tr>
+		<tr><td><th>Fun Stuff</th></td></tr>
 		<tr><td>Sending email and SMS, payments, JavaScript, file uploads, testing</td></tr		>
 		<tr><td>Resources for further learning</td></tr>
 		<tr><td>No homework</td></tr>
@@ -208,7 +208,7 @@
 	
 	<tr>
 		<tr><td rowspan="3">Week 11</td></tr>
-		<tr><td>Submit Final Project</td></tr>
+		<tr><td><th>Submit Final Project</th></td></tr>
 		<tr><td>Celebrate!</td></tr>
 	</tr>
 </table>
