part 5 done, and part 6 initial

--- a/part_5/syllabus.html
+++ b/part_5/syllabus.html
@@ -23,33 +23,23 @@
 
 <h2>Who, Where, & When</h2>
 
-<table>
-	<tr>
-		<td>Instructor:</td>
-		<td>Raghu Betina (r-betina@kellogg.northwestern.edu)</td>
-	</tr>
-	<tr>
-		<td>Lecture:</td>
-		<td>Mondays 6:00-9:00pm, Wieboldt 203</td>
-	</tr>
-	<tr>
-		<td>Office Hours:</td>
-		<td>TBD, and by appointment</td>
-	</tr>
-</table>
+<dl>
+	<dt>Instructor:</dt>
+	<dd>Raghu Betina (r-betina@kellogg.northwestern.edu)</dd>
+	<dt>Lecture:</dt>
+	<dd>Mondays 6:00-9:00pm, Wieboldt 203</dd>
+	<dt>Office Hours:</dt>
+	<dd>TBD, and by appointment</dd>
+</dl>
 
 <h2>Required Materials</h2>
 
-<table>
-	<tr>
-		<td>Text:</td>
-		<td>Chris Pine&rsquo;s <i>Learn to Program, <u>Second Edition.</u></i></td>
-	</tr>
-	<tr>
-		<td>Software:</td>
-		<td>You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.</td>
-	</tr>
-</table>
+<dl>
+	<dt>Text:</dt>
+	<dd>Chris Pine&rsquo;s <i>Learn to Program, <u>Second Edition.</u></i></dd>
+	<dt>Software:</dt>
+	<dd>You will receive a detailed guide to setting up a development environment on your Mac or Windows laptop. All required software is free. In addition, some optional tools that will make your life easier have a free trial.</dd>
+</dl>
 
 <h2>Course Format</h2>
 
