--- a/part_7/handwritten_landing.html
+++ b/part_7/handwritten_landing.html
@@ -4,37 +4,70 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>This is my awesome product (height: 200px)</h1>
+  <div>
+    <h1 class="heading">This is my awesome product (height: 200px)</h1>
+  </div>
 
-  <h3>What Does It Do (33%)</h3>
-  <p>This is what it does. Intrigued yet?</p>
-  <a href="#">Learn More</a>
+  <div class="row">
+    <div class="one_column">
+      <h3>What Does It Do (33%)</h3>
+      <p>This is what it does. Intrigued yet?</p>
+      <a href="#">Learn More</a>
+    </div>
+  
+    <p><div class="one_column">
+        <h3>FAQ (33%)</h3>
+        <p>You've got questions. We've got answers.</p>
+        <a href="#">Go to the FAQ</a>
+      </div>
+    
+      <div class="one_column">
+        <h3>Purchase Now (33%)</h3>
+        <p>Convinced?</p>
+        <a href="#">Buy Now</a>
+      </div>
+    </div>
 
-  <h3>FAQ (33%)</h3>
-  <p>You've got questions. We've got answers.</p>
-  <a href="#">Go to the FAQ</a>
+    <div class="row">
+      <div class="one_column">
+          <h3>Description (33%)</h3>
+          <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
+        </div>
+        </p>
+      <div class="two_columns">
+        <img src="screenshot_2.png">
+      </div>
+    </div>
 
-  <h3>Purchase Now (33%)</h3>
-  <p>Convinced?</p>
-  <a href="#">Buy Now</a>
+  <div class="row">
+    <div class="two_columns">
+      <img src="screenshot_1.png">
+    </div>
+  
+     <div class="one_column">
+       <h3>Description of screenshot (33%)</h3>
+       <p>If you aren't convinced by this screenshot, you'll never be.</p>
+     </div>
+    </div>
+  
 
-  <h3>Description (33%)</h3>
-  <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
-  <img src="screenshot_2.png">
+  <div class="row">
+    <div class="skinny_column">
+      <h3>Testimonial (25%)</h3>
+      <p>This product changed my life!</p>
+    </div>
+  
+    <div class="skinny_column">
+      <h3>Testimonial (25%)</h3>
+      <p>Best thing since sliced bread.</p>
+    </div>
+  
+    <div class="skinny_column">
+      <h3>Testimonial (25%)</h3>
+      <p>It's kinda of "meh."</p>
+    </div>
+  </div>
 
-  <img src="screenshot_1.png">
-  <h3>Description of screenshot (33%)</h3>
-  <p>If you aren't convinced by this screenshot, you'll never be.</p>
-
-  <h3>Testimonial (25%)</h3>
-  <p>This product changed my life!</p>
-
-  <h3>Testimonial (25%)</h3>
-  <p>Best thing since sliced bread.</p>
-
-  <h3>Testimonial (25%)</h3>
-  <p>It's kinda of "meh."</p>
-
-  <footer>&#169; Our Awesome Company 2013</footer>
+  <div class="row"><footer>&#169; Our Awesome Company 2013</footer></div>
 </body>
 </html>
