--- a/part_7/handwritten_landing.html
+++ b/part_7/handwritten_landing.html
@@ -12,19 +12,19 @@
     <div class="one_column">
       <h3>What Does It Do (33%)</h3>
       <p>This is what it does. Intrigued yet?</p>
-      <a href="#">Learn More</a>
+      <a class ="link" href="#">Learn More</a>
     </div>
   
     <p><div class="one_column">
         <h3>FAQ (33%)</h3>
         <p>You've got questions. We've got answers.</p>
-        <a href="#">Go to the FAQ</a>
+        <a class ="link" href="#">Go to the FAQ</a>
       </div>
     
       <div class="one_column">
         <h3>Purchase Now (33%)</h3>
         <p>Convinced?</p>
-        <a href="#">Buy Now</a>
+        <a class="link" href="#">Buy Now</a>
       </div>
     </div>
 
